detection_of_pcb_prj/detection_of_pcb/Library/Include/C154.h

//Continuous Motion Section 6.17
I16 FNTYPE c154_set_continuous_move(I16 AxisNo, I16 Enable);
I16 FNTYPE c154_check_continuous_buffer(I16 AxisNo);
I16 FNTYPE c154_dwell_move(I16 AxisNo, F64 milliSecond);
//Multiple Axes Simultaneous Operation Section 6.18
I16 FNTYPE c154_set_tr_move_all(I16 TotalAxes, I16 *AxisArray, F64 *DistA, F64 *StrVelA, F64 *MaxVelA, F64 *TaccA, F64 *TdecA);
I16 FNTYPE c154_set_sa_move_all(I16 TotalAx, I16 *AxisArray, F64 *PosA, F64 *StrVelA, F64 *MaxVelA, F64 *TaccA, F64 *TdecA, F64 *SVaccA, F64 *SVdecA);
I16 FNTYPE c154_set_ta_move_all(I16 TotalAx, I16 *AxisArray, F64 *PosA, F64 *StrVelA, F64 *MaxVelA, F64 *TaccA, F64 *TdecA);
I16 FNTYPE c154_set_sr_move_all(I16 TotalAx, I16 *AxisArray, F64 *DistA, F64 *StrVelA, F64 *MaxVelA, F64 *TaccA, F64 *TdecA, F64 *SVaccA, F64 *SVdecA);
I16 FNTYPE c154_start_move_all(I16 FirstAxisNo);
I16 FNTYPE c154_stop_move_all(I16 FirstAxisNo);
I16 FNTYPE c154_set_sync_stop_mode(I16 AxisNo, I16 stop_mode);
I16 FNTYPE c154_set_sync_option(I16 AxisNo, I16 sync_stop_on, I16 cstop_output_on, I16 sync_option1, I16 sync_option2);
I16 FNTYPE c154_set_sync_signal_source(I16 AxisNo, I16 sync_axis);
I16 FNTYPE c154_set_sync_signal_mode(I16 AxisNo, I16 mode);
//General-purposed Input/Output Section 6.19
I16 FNTYPE c154_set_gpio_output(I16 CardId, I16 DoValue );
I16 FNTYPE c154_get_gpio_output(I16 CardId, I16 *DoValue );
I16 FNTYPE c154_get_gpio_input(I16 CardId, I16 *DiValue );
I16 FNTYPE c154_set_gpio_input_function(I16 CardId, I16 Channel, I16 Select, I16 Logic);
//Soft Limit 6.20
I16 FNTYPE c154_disable_soft_limit(I16 AxisNo);
I16 FNTYPE c154_enable_soft_limit(I16 AxisNo, I16 Action);
I16 FNTYPE c154_set_soft_limit(I16 AxisNo, I32 PlusLimit, I32 MinusLimit);
//Backlas Compensation / Vibration Suppression 6.21
I16 FNTYPE c154_backlash_comp(I16 AxisNo, I16 CompPulse, I16 Mode);
I16 FNTYPE c154_suppress_vibration(I16 AxisNo, U16 ReverseTime, U16 ForwardTime);
I16 FNTYPE c154_set_fa_speed(I16 AxisNo, F64 FA_Speed);