detection_of_pcb_prj/detection_of_pcb/Library/Include/C154.bas


' Continuous Motion Section 6.16
Declare Function c154_set_continuous_move Lib "C154.dll" (ByVal AxisNo As Integer, ByVal Enable As Integer) As Integer
Declare Function c154_check_continuous_buffer Lib "C154.dll" (ByVal AxisNo As Integer) As Integer
Declare Function c154_dwell_move Lib "C154.dll" (ByVal AxisNo As Integer, ByVal milliSecond As Double) As Integer
'
' Multiple Axes Simultaneous Operation Section 6.17
Declare Function c154_set_tr_move_all Lib "C154.dll" (ByVal TotalAxes As Integer, AxisArray As Integer, DistA As Double, StrVelA As Double, MaxVelA As Double, TaccA As Double, TdecA As Double) As Integer
Declare Function c154_set_sa_move_all Lib "C154.dll" (ByVal TotalAx As Integer, AxisArray As Integer, PosA As Double, StrVelA As Double, MaxVelA As Double, TaccA As Double, TdecA As Double, SVaccA As Double, SVdecA As Double) As Integer
Declare Function c154_set_ta_move_all Lib "C154.dll" (ByVal TotalAx As Integer, AxisArray As Integer, PosA As Double, StrVelA As Double, MaxVelA As Double, TaccA As Double, TdecA As Double) As Integer
Declare Function c154_set_sr_move_all Lib "C154.dll" (ByVal TotalAx As Integer, AxisArray As Integer, DistA As Double, StrVelA As Double, MaxVelA As Double, TaccA As Double, TdecA As Double, SVaccA As Double, SVdecA As Double) As Integer
Declare Function c154_start_move_all Lib "C154.dll" (ByVal FirstAxisNo As Integer) As Integer
Declare Function c154_stop_move_all Lib "C154.dll" (ByVal FirstAxisNo As Integer) As Integer
'
' General-purposed Input/Output Section 6.18
Declare Function c154_set_gpio_output Lib "C154.dll" (ByVal CardId As Integer, ByVal DoValue As Integer) As Integer
Declare Function c154_get_gpio_output Lib "C154.dll" (ByVal CardId As Integer, DoValue As Integer) As Integer
Declare Function c154_get_gpio_input Lib "C154.dll" (ByVal CardId As Integer, DiValue As Integer) As Integer
Declare Function c154_set_gpio_input_function Lib "C154.dll" (ByVal CardId As Integer, ByVal Channel As Integer, ByVal SelectNo As Integer, ByVal Logic As Integer) As Integer
'

Declare Function c154_set_sync_stop_mode Lib "C154.dll"(ByVal AxisNo As Integer,ByVal stop_mode As Integer) As Integer
Declare Function c154_set_sync_option Lib "C154.dll"(ByVal AxisNo As Integer, ByVal sync_stop_on As Integer, ByVal cstop_output_on As Integer, ByVal sync_option1 As Integer, ByVal sync_option2 As Integer)As Integer
Declare Function c154_set_sync_signal_source Lib "C154.dll"(ByVal AxisNo As Integer, ByVal sync_axis As Integer)As Integer
Declare Function c154_set_sync_signal_mode Lib "C154.dll"(ByVal AxisNo As Integer, ByVal mode As Integer)As Integer


' Soft Limit 6.19
Declare Function c154_disable_soft_limit Lib "C154.dll" (ByVal AxisNo As Integer) As Integer
Declare Function c154_enable_soft_limit Lib "C154.dll" (ByVal AxisNo As Integer, ByVal Action As Integer) As Integer
Declare Function c154_set_soft_limit Lib "C154.dll" (ByVal AxisNo As Integer, ByVal PlusLimit As Long, ByVal MinusLimit As Long) As Integer
'
' Backlas Compensation / Vibration Suppression 6.20
Declare Function c154_backlash_comp Lib "C154.dll" (ByVal AxisNo As Integer, ByVal CompPulse As Integer, ByVal Mode As Integer) As Integer
Declare Function c154_suppress_vibration Lib "C154.dll" (ByVal AxisNo As Integer, ByVal ReverseTime As Integer, ByVal ForwardTime As Integer) As Integer
Declare Function c154_set_fa_speed Lib "C154.dll" (ByVal AxisNo As Integer, ByVal FA_Speed As Double) As Integer
'

